examples/errors/import_can_not_resolve/main.lc
import * from "xxx"

function main() {
	const tiger = Tiger{};
}
